Complete header structure

--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Heello there!</title>
+    <!-- Required meta tags-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Google fonts-->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Poppins:300italic,400italic,500italic,600italic,700italic,800italic,700,300,600,800,400,500&amp;subset=cyrillic-ext,greek-ext,latin,latin-ext,cyrillic,greek,vietnamese">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,500" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- CSS Custom styles-->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Hello, world!</title>
   </head>
-  <body></body>
-  <h1>this is a heading</h1>
-  <h4>this is anothter heading  </h4>
-  <p>this is a paragraph</p>
+  <body>
+    <header>
+      <div class="container">
+        <div class="logo"><img src="assets/img/logo.png" alt="logo"></div>
+        <div class="currency-dropdown">
+          <ul>
+            <li><a href="#">EUR</a></li>
+            <li><a href="#">EGP</a></li>
+            <li><a href="#">USD</a></li>
+          </ul>
+        </div>
+        <div class="lang-dropdown">
+          <ul>
+            <li><a href="#">AR</a></li>
+            <li><a href="#">EN</a></li>
+            <li><a href="#">SP</a></li>
+          </ul>
+        </div>
+        <div class="search">
+          <form class="search-form" action="#">
+            <input type="text" name="search" placeholder="SEARCH"><span class="icon fa fa-search"></span>
+          </form>
+        </div><a class="signin-btn" href="#">SIGN IN</a>
+        <div class="cart"><a href="#"><span class="icon fa fa-shopping-cart"></span></a></div>
+        <div class="hamburger-menu"><span class="icon fa fa-bars"></span>
+          <ul class="hamburger-links">
+            <li><a href="#">Daily Deal</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <script src="assets/js/scripts.js"></script>
+  </body>
 </html>
